apps/k8s/knarr/romm/romm.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm-db
  namespace: knarr
  labels:
    app: romm-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: romm-db
    spec:
      containers:
      - name: romm-db
        image: mariadb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: romm-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: romm-db
  namespace: knarr
spec:
  selector:
    app: romm-db
  ports:
  - port: 3306
    targetPort: 3306
    name: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: knarr
  labels:
    app: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: romm
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: romm
        image: rommapp/romm:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: library
          mountPath: /romm/library
        - name: resources
          mountPath: /romm/resources
        - name: assets
          mountPath: /romm/assets
        - name: config
          mountPath: /romm/config
      volumes:
      - name: library
        persistentVolumeClaim:
          claimName: romm-library-pvc
      - name: resources
        persistentVolumeClaim:
          claimName: romm-resources-pvc
      - name: assets
        persistentVolumeClaim:
          claimName: romm-assets-pvc
      - name: config
        persistentVolumeClaim:
          claimName: romm-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: knarr
spec:
  selector:
    app: romm
  ports:
  - port: 80
    targetPort: 8080
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "RomM"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "romm.png"
    gethomepage.dev/description: "ROM/ISO library manager"
spec:
  rules:
  - host: romm.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: romm
            port:
              number: 80
